// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Act II economy tuning > generates deterministic Act II reward, vault, and shop surfaces from fresh save context > fresh act II economy 1`] = `
{
  "act": {
    "id": "act_core_descent",
    "label": "Act II",
    "priceAdjustment": 1,
    "rewardTier": "escalated",
    "stockBonus": 1,
  },
  "eliteRewards": [
    [
      "item_surface_beacon_drone",
      "lunar source",
    ],
    [
      "item_plasma_bloom_filter",
      "vault source",
    ],
    [
      "item_low_orbit_ore_scrip",
      "lunar source",
    ],
    [
      "item_convoy_receipt_printer",
      "route source",
    ],
    [
      "item_ricochet_branch_coupler",
      "elite source",
    ],
  ],
  "rerollCosts": [
    3,
    4,
  ],
  "shop": {
    "count": 5,
    "items": [
      [
        "item_convoy_receipt_printer",
        18,
        "shop source",
      ],
      [
        "item_crossfeed_detonator",
        22,
        "boss source",
      ],
      [
        "item_arc_welder_drone",
        17,
        "Shop pool",
      ],
      [
        "item_magnetized_tithe_box",
        17,
        "Shop pool",
      ],
      [
        "item_coupon_cascade_fuse",
        17,
        "shop source",
      ],
    ],
  },
  "vaultRewards": [
    [
      "item_plasma_bloom_filter",
      "vault source",
    ],
    [
      "item_excess_warhead_clause",
      "vault source",
    ],
    [
      "item_mining_laser_transit",
      "vault source",
    ],
    [
      "item_overkill_ledger",
      "vault source",
    ],
    [
      "item_phase_wake_suture",
      "vault source",
    ],
  ],
}
`;

exports[`Act II economy tuning > generates deterministic progressed-save Act II economy without changing upgrade accounting > progressed act II economy 1`] = `
{
  "act": {
    "id": "act_core_descent",
    "label": "Act II",
    "priceAdjustment": 1,
    "rewardTier": "escalated",
    "stockBonus": 1,
  },
  "eliteRewards": [
    [
      "item_surface_beacon_drone",
      "lunar source",
    ],
    [
      "item_plasma_bloom_filter",
      "vault source",
    ],
    [
      "item_low_orbit_ore_scrip",
      "lunar source",
    ],
    [
      "item_convoy_receipt_printer",
      "route source",
    ],
    [
      "item_ricochet_branch_coupler",
      "elite source",
    ],
  ],
  "rerollCosts": [
    3,
    4,
  ],
  "shop": {
    "count": 6,
    "items": [
      [
        "item_convoy_receipt_printer",
        17,
        "shop source",
      ],
      [
        "item_warhead_echo_chamber",
        23,
        "boss source",
      ],
      [
        "item_magnetized_tithe_box",
        14,
        "Shop pool",
      ],
      [
        "item_phase_anchor_spool",
        18,
        "vault source",
      ],
      [
        "item_coupon_cascade_fuse",
        16,
        "shop source",
      ],
      [
        "item_credit_reroute_fuse",
        14,
        "Shop pool",
      ],
    ],
  },
  "vaultRewards": [
    [
      "item_plasma_bloom_filter",
      "vault source",
    ],
    [
      "item_excess_warhead_clause",
      "vault source",
    ],
    [
      "item_mining_laser_transit",
      "vault source",
    ],
    [
      "item_overkill_ledger",
      "vault source",
    ],
    [
      "item_phase_wake_suture",
      "vault source",
    ],
    [
      "item_revenge_beam",
      "vault source",
    ],
  ],
}
`;

exports[`Act II economy tuning > keeps inter-act junction effects deterministic for fresh and progressed saves > fresh junction economy effects 1`] = `
[
  {
    "effects": {
      "creditsDelta": -4,
      "curseDelta": 0,
      "hullPatchDelta": 1,
      "rewardBiasTags": [],
      "rewardChoiceBonus": 0,
      "riskLabel": null,
      "routeIntel": false,
      "salvageDelta": 0,
      "shopDiscount": 0,
    },
    "id": "act_outer_rim-act_core_descent-1-repair",
    "kind": "repair",
  },
  {
    "effects": {
      "creditsDelta": 0,
      "curseDelta": 0,
      "hullPatchDelta": 0,
      "rewardBiasTags": [
        "heat",
      ],
      "rewardChoiceBonus": 1,
      "riskLabel": null,
      "routeIntel": false,
      "salvageDelta": 0,
      "shopDiscount": 0,
    },
    "id": "act_outer_rim-act_core_descent-2-reward",
    "kind": "reward",
  },
  {
    "effects": {
      "creditsDelta": 0,
      "curseDelta": 0,
      "hullPatchDelta": 0,
      "rewardBiasTags": [],
      "rewardChoiceBonus": 0,
      "riskLabel": null,
      "routeIntel": false,
      "salvageDelta": 3,
      "shopDiscount": 0,
    },
    "id": "act_outer_rim-act_core_descent-3-salvage",
    "kind": "salvage",
  },
]
`;

exports[`Act II economy tuning > keeps inter-act junction effects deterministic for fresh and progressed saves > progressed junction economy effects 1`] = `
[
  {
    "effects": {
      "creditsDelta": -3,
      "curseDelta": 0,
      "hullPatchDelta": 1,
      "rewardBiasTags": [],
      "rewardChoiceBonus": 0,
      "riskLabel": null,
      "routeIntel": false,
      "salvageDelta": 0,
      "shopDiscount": 0,
    },
    "id": "act_outer_rim-act_core_descent-1-repair",
    "kind": "repair",
  },
  {
    "effects": {
      "creditsDelta": 0,
      "curseDelta": 0,
      "hullPatchDelta": 0,
      "rewardBiasTags": [
        "heat",
      ],
      "rewardChoiceBonus": 1,
      "riskLabel": null,
      "routeIntel": false,
      "salvageDelta": 0,
      "shopDiscount": 0,
    },
    "id": "act_outer_rim-act_core_descent-2-reward",
    "kind": "reward",
  },
  {
    "effects": {
      "creditsDelta": 0,
      "curseDelta": 1,
      "hullPatchDelta": 0,
      "rewardBiasTags": [
        "curse",
        "overkill",
      ],
      "rewardChoiceBonus": 1,
      "riskLabel": "Overburn risk +1 curse",
      "routeIntel": false,
      "salvageDelta": 5,
      "shopDiscount": 0,
    },
    "id": "act_outer_rim-act_core_descent-3-risk",
    "kind": "risk",
  },
]
`;
